# Debug-Container

./: .gitignore  Dockerfile  README.md  entrypoint-default.sh  entrypoint-sshd.sh  motd  sudoers-debug
.github/workflows/: docker-image.yml
src/: okta-get-aws-eks-credentials.sh
src/aztfexport/: README.md  pes-aztfexport.sh  pes-docker-aztfexport.sh  pes-search_and_replace.py  pes_search_and_replace.py  test-pes_search_and_replace.py
src/aztfexport/aztf_out/: aztfexportResourceMapping.json  aztfexportResourceMapping.json.out
src/rust_aztfexport_rename/: Cargo.toml  README.md  git_pre-commit_hooks.sh
src/rust_aztfexport_rename/src/: clap.rs  lib.rs  main.rs  res_del.rs  res_map.rs  res_ren_del.rs  res_rename.rs  resource_map.rs  resource_rename.rs
src/rust_aztfexport_rename/tests/202504_aztfexport_rg/: aztfexportResourceMapping.json  aztfexportResourceMapping.json.out  aztfexportResourceMapping_test2.json  aztfexportSkippedResources.txt
src/rust_aztfexport_rename/tests/202507_arc_rg/: aztfexportResourceMapping.json  aztfexportResourceMapping_08.json
src/rust_aztfexport_rename/tests/202508_filter/: aztfexpResMap_08.json
src/tls-gen-selfsigned-cert/: generate-ca-selfsigned.sh
