[package]
name = "rust_aztfexport_rename"
version = "0.1.9+20250424"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# use indexmap rather than hashmap
indexmap = { version = "1.9", features = ["serde"] }
clap = { version = "4.2", features = ["derive"] }
